# koala-clash-service

./: .gitignore  Cargo.toml  Changelog.md  README.md  clash_verge_api.key
.github/workflows/: release.yml
src/: install.rs  main.rs  uninstall.rs  utils.rs
src/encry/: sign.rs
src/files/: info.plist.tmpl  launchd.plist.tmpl  systemd_service_unit.tmpl
src/service/: core.rs  data.rs  ipc.rs  mod.rs  process.rs
