[package]
name = "clash-verge-service"
version = "1.0.8"
edition = "2021"
authors = ["zzzgydi", "Clash Verge Rev Team"]
license = "GPL-3.0"
repository = "https://github.com/zzzgydi/clash-verge-service.git"

[[bin]]
name = "clash-verge-service"
path = "src/main.rs"

[[bin]]
name = "install-service"
path = "src/install.rs"

[[bin]]
name = "uninstall-service"
path = "src/uninstall.rs"

[dependencies]
anyhow = "1.0.98"
log = "0.4.27"
log4rs = "1.3"
once_cell = "1.20.3"
serde_json = "1.0.138"
parking_lot = "0.12"
windows-service = "0.8.0"
tokio = { version = "1.45.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
sysinfo = "0.35.0"
libc = "0.2.172"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
uuid = "1.3.0"
futures = "0.3.31"
winapi = { version = "0.3", features = ["namedpipeapi", "handleapi", "winbase", "winnt", "winerror", "errhandlingapi", "accctrl", "aclapi", "securitybaseapi", "minwinbase", "wingdi"] }
interprocess = { version = "2.2.3", features = ["tokio"] }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10.72", features = ["vendored"] }

[target.'cfg(target_os = "macos")'.dependencies]
interfaces = "0.0.9"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
